--- a/app/Resources/views/admin/listebien.html.twig
+++ b/app/Resources/views/admin/listebien.html.twig
@@ -1,22 +1,73 @@
 {% extends 'base.html.twig' %}
 {% block title %}Connexion{% endblock %}
 {% block contenus %}
-    <table class="table" id="tablebien" border="2">
-        <thead>
-            <tr>
-                <th>TYPE DE BIEN</th>
-                <th>ADRESSE</th>
-                <th>MONTANT LOCATION</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for bien in biens %}
-            <tr>
-                <td scope="row">{{ bien.nomTypeBien }}</td>
-                <td>{{ bien.adresse }}</td>
-                <td>{{ bien.prixLoc }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+<div class="page-head">
+    <div class="container">
+        <div class="row">
+            <div class="page-head-content">
+                <h1 class="page-title">Accueil Admin </h1>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End page header -->
+<table class="table" id="tablebien" border="2">
+    <thead>
+        <tr>
+            <th>TYPE DE BIEN</th>
+            <th>ADRESSE</th>
+            <th>MONTANT LOCATION</th>
+        </tr>
+    </thead>
+    <tbody>
+    {% for bien in biens %}
+        <tr>
+            <td scope="row">{{ bien.nomTypeBien }}</td>
+            <td>{{ bien.adresse }}</td>
+            <td>{{ bien.prixLoc }}</td>
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
+<div style="width: 500px; margin: auto; backrgound-color: black;">
+    <form action="" method="post" data-form="form_inscription">
+        <div class="alert alert-danger cacher" id="form_inscription" role="alert">
+            <ul>
+            </ul>
+        </div>
+        <input type="hidden" name="typeformInscrit" id="typeformInscrit" value="inscription"/>
+        <input type="hidden" name="idBienInscrit" id="idBienInscrit" value="{# {{ bien[0].id }} #}"/>
+        <div class="form-group">
+            <label for="nomClient">Prénom et Nom</label>
+            <input type="text" class="form-control" name="nomClientInscrit" id="nomClientInscrit" data-champ="Prénom et Nom">
+        </div>
+        <div class="form-group">
+            <label for="numCni">Numéro pièce</label>
+            <input type="number" class="form-control" name="numCniInscrit" id="numCniInscrit" data-champ="numéro pièce">
+        </div>
+        <div class="form-group">
+            <label for="adresse">Adresse</label>
+            <input type="text" class="form-control" name="adresseInscrit" id="adresseInscrit" data-champ="Adresse">
+        </div>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" class="form-control" name="emailInscrit" id="emailInscrit" data-champ="email">
+        </div>
+        <div class="form-group">
+            <label for="telephone">téléphone</label>
+            <input type="number" class="form-control" name="telephoneInscrit" id="telephoneInscrit" data-champ="téléphone">
+        </div>
+        <div class="form-group">
+            <label for="login">nom d'utilisateur</label>
+            <input type="text" class="form-control" name="loginInscrit" id="loginInscrit" data-champ="nom d'utilisateur">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" name="passwordInscrit" id="passwordInscrit" data-champ="mot de passe">
+        </div>
+        <div class="text-center">
+            <button type="submit" class="btn btn-default">S'inscrire</button>
+        </div>
+    </form>
+</div>
 {% endblock %}
