--- a/app/Resources/views/admin/contrat.html.twig
+++ b/app/Resources/views/admin/contrat.html.twig
@@ -168,18 +168,51 @@
                                         <div class="col-md-12">
                                             <form method="POST" class="form-group">
                                                 <div class="form-group">
-                                                    <label>Text area</label>
-                                                    <textarea class="form-control" rows="5"></textarea>
+                                                    <label>termes et conditions</label>
+                                                    <textarea class="form-control" readonly="true" rows="15">
+                                                        Partie II– Les éléments de base du langage Python
+                                                        II.1. Pourquoi Python ?
+                                                        Quelques notions essentielles sur le langage Python
+                                                        Python est un langage de programmation généraliste, facile à apprendre et rapide à
+                                                        mettre en œuvre.
+                                                        Python est généraliste car, selon les multiples réalisations qu'il a à son actif, il peut
+                                                        être utilisé dans tous les domaines : écriture d'applications pour le Web (serveur
+                                                        d'application Zope, framework Django), programmes de calculs mathématiques
+                                                        (biblithèque SciPy), interfaces graphiques (il existe des supports de Python pour les
+                                                        sytèmes d'interface graphique GTK, Qt, TK, wxWidget), programmation de scripts
+                                                        systèmes, etc.
+                                                        De fait, Python dispose d'une très large bibliothèque standard qui offre au
+                                                        programmeur des outils très divers pour : la gestion réseau (librairie socket), la
+                                                        manipulation du format xml, l'accès aux protocoles d'Internet (protocoles des services
+                                                        courriel, divers protocoles web), l'accès aux éléments du système d'exploitation
+                                                        sous-jacent (accès aux fichiers et répertoires, gestion des processus), l'écriture
+                                                        d'interfaces graphiques (librairie Tkinter), l'accès aux bases de données relationnelles,
+                                                        etc.
+                                                        Il est aussi possible d'étendre Python en intégrant de nouveaux modules. Par exemple
+                                                        la librairie PIL permet de traiter des images.
+                                                        [The Python Standard Library: http://docs.python.org/2/library/index.html]
+                                                        Python est facile à apprendre car de nombreuses opérations dévolues au programmeur
+                                                        dans les langages classiques comme le langage C, par exemple la gestion de la
+                                                        mémoire, sont prises en charge par l'interpréteur Python. De même, Python gère
+                                                        dynamiquement les variables et libère le programmeur des déclarations de type.
+                                                        De plus Python impose d'écrire les blocs d'instructions de manière indentée, ce qui
+                                                        favorise grandement la lecture des programmes.
+                                                        Enfin, en tant que langage interprété (voir dans la partie I de ce cours), Python est
+                                                        rapide à mettre en œuvre. Il suffit de lancer la console Python pour avoir sous la min
+                                                        de quoi tester directement des commandes et des structures de données. Cela est un
+                                                        gain de temps pour le programmeur par rapport au cycle compilation/édition de liens
+                                                        du langage C.
+                                                    </textarea>
                                                 </div>
-                                                <div class="checkbox">
+                                                <div class="radio">
                                                     <label style="font-weight: bold;">
-                                                        <input type="checkbox" name="soumContrat" id="soumContrat" value="accepter"> Accepter
+                                                        <input type="radio" name="soumContrat" class="soumContrat" value="accepter"> Accepter
                                                     </label>
                                                     <label style="font-weight: bold;">
-                                                        <input type="checkbox" name="soumContrat" id="soumContrat" value="refuser"> Refuser
+                                                        <input type="radio" name="soumContrat" class="soumContrat" value="refuser"> Refuser
                                                     </label>
                                                 </div>
-                                                <button style="color: #1a2b3c;" type="submit" class="btn btn-sucess">Enregistrer</button>
+                                                <button style="color: #1a2b3c;" id="pushContrat"  type="submit" class="btn btn-sucess">Enregistrer</button>
                                             </form>
                                         </div>
                                     </di>
